# poloniex-rs

./: Cargo.toml  README.md
examples/: main.rs  public_api.rs  trading_api.rs
src/: client.rs  converters.rs  credentials.rs  errors.rs  lib.rs  public_client.rs
src/helpers/: mod.rs
src/structs/: mod.rs  ticker.rs
src/types/: cancel_order_response.rs  chart_data_item.rs  currency.rs  currency_info.rs  currency_pair.rs  deserialize.rs  error_message.rs  loan_orders.rs  mod.rs  open_order.rs  opened_order.rs  order_book.rs  period.rs  ticker.rs  trade_history_item.rs  trade_type.rs
