[package]
name = "poloniex3"
version = "0.1.0"
authors = ["Sergey Potapov <blake131313@gmail.com>"]

[dependencies]
reqwest = "0.7.2"
hyper = "0.11.0"
error-chain = "*"

serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
time = "*"
data-encoding = "2.0.0-rc.1"
rust-crypto = "0.2"

[dev-dependencies]
dotenv = "0.10.1"
