[package]
name = "poloniex"
version = "0.0.1-alpha"
authors = ["Sergey Potapov <blake131313@gmail.com>"]


description = "Client for Poloniex crypto exchange API"
keywords = ["poloniex", "cryptocurrency", "trading", "bitcoin", "ethereum"]
license = "MIT"
repository = "https://github.com/greyblake/poloniex-rs"
homepage = "https://github.com/greyblake/poloniex-rs"
documentation = "https://docs.rs/poloniex"
readme = "README.md"
categories = ["api-bindings"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]



[dependencies]
reqwest = "0.7.2"
hyper = "0.11.0"
error-chain = "*"

serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
time = "0.1.38"
data-encoding = "2.0.0-rc.1"
rust-crypto = "0.2"

[dev-dependencies]
dotenv = "0.10.1"
